# eschool

./: .env.example  .env.render.example  .gitignore  ACTIVITY_LOG_SUCCESS.md  CHANGELOG_STUDENT_OCT_2025.md  DEPLOYMENT_READY.md  ETAT_DU_PROJET.md  ETAT_PROJET_COMPLET_SEPT_2025.md  ORGANISATION_DOCUMENTATION.md  PLAN_ACTION_PRODUCTION.md  PLAN_AMELIORATIONS_ESCHOOL.md  PRESENTATION_PRODUCTION.md  PRODUCTION_FEATURES.md  RBAC_IMPLEMENTATION_PLAN.md  README.md  SECURITY_AUDIT_REPORT.md  UPDATE_INDEX_OCT_2025.md  URLS_DOCUMENTATION.md  build.sh  create_communication_test_data.py  create_enrollment_test_data.py  create_grades.py  create_payment_test_data.py  debug_login_issue.py  debug_timezone_issues.py  detect_duplicate_ids.py  fix_timezone_warnings.py  get_teacher_info.py  package.json  populate_data.py  pyproject.toml  requirements.txt  student_fees_test_export.csv  tailwind.config.js  test_login_direct.py  test_login_simple.py  test_rbac_phase1.py  test_summary.py  test_views.py
academic/: admin.py  forms.py  managers.py  models.py  test_integration.py  test_managers.py  test_models.py  test_settings.py  test_views.py  tests.py  urls.py  views.py
accounts/: adapters.py  admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
activity_log/: README.md  admin.py  apps.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
communication/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/: admin.py  api_urls.py  models.py  settings.py  urls.py  views.py
docs/: ACTIVITY_LOG_DASHBOARD_INTEGRATION.md  COMPTES_TEST.md  (+39 more)
(+287 files in other folders)
